2024-11-09 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSNotificationCenter.m:
	* Tests/base/NSNotification/general.m:
	Rewrite mechanism for handling the behavior of observations using
	blocks.  Add simple testcase checking reference counts of observer.

2024-11-08 Richard Frith-Macdonald <rfm@gnu.org>
	
	* Headers/Foundation/NSFileHandle.h:
	* Source/GSFileHandle.m:
	* Source/NSFileHandle.m:
	Add OSX 10.15 file offset methods (issue 325, pull 446 and more)

2024-11-03 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSFileManager.m: Fix case where positive result of asking
	handler whether to proceed was ignored.

2024-11-01 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSDate.m: Fix returing receiver when earlier/later argument
	is equal to the receiver.  Various formatting fixes.

2024-10-29 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSUndoManager.m: set zero/nil return value when forwarding
	invocation ... in case calling code tries to use the result.

2024-10-28 Hugo Melder <hugo@algoriddim.com>

	* Source/NSString.m:
	-commonPrefixWithString:options: returns nil when string supplied as
	first argument is nil. On macOS, the empty string is returned instead.
	Align implementation with macOS.

2024-10-13 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSFileManager.m: Create an NSError object when we fail to
	copy because the destination item already exists.

2024-10-10: Hugo Melder <hugo@algoriddim.com>

	* Source/NSDate.m:
	* Source/NSDatePrivate.h:
	NSDate is now a small object in slot 6, when configuring GNUstep with the
	clang/libobjc2 toolchain.  This is done by compressing the binary64 fp
	holding the seconds since reference date (because someone at Apple
	thought it would be a good idea to represent a time interval as a fp).
	Note that this assumes that IEEE 754 is used.

	* Source/NSCalendarDate.m:
	Remove access to the NSDate private concrete Class
	and implement -timeIntervalSinceReferenceDate instead.