@@ -187,6 +187,8 @@ pointerFunctionsRelinquish(PFInfo *PF, void **itemptr)
     (*PF->relinquishFunction)(*itemptr, PF->sizeFunction);
   if (memoryType(PF->options, NSPointerFunctionsWeakMemory))
     WEAK_WRITE(itemptr, 0);
+  else if (memoryType(PF->options, NSPointerFunctionsStrongMemory))
+    STRONG_WRITE(itemptr, 0);
   else
     *itemptr = 0;
 }
@@ -203,7 +205,7 @@ pointerFunctionsReplace(PFInfo *PF, void **dst, void *src)
       if (PF->relinquishFunction != 0)
 	(*PF->relinquishFunction)(*dst, PF->sizeFunction);
       if (memoryType(PF->options, NSPointerFunctionsWeakMemory))
-        WEAK_WRITE(dst, 0);
+        WEAK_WRITE(dst, src);
       else
 	*dst = src;
     }
